style.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 10vh;
}

.mainGame {
    border: 1px solid rgb(237, 227, 227);
    box-shadow: 0px 0px 25px rgb(154, 150, 150);
    display:flex;
    flex-direction: column;
    justify-content: center;
    justify-content: space-evenly;
    justify-content: flex-start;
    align-items: flex-start;
    flex-wrap: nowrap;
    width:60vh;
    height: 50vh;
}
.mainGame img {
    width: 100%;
    height: 50%;
}

.gameTitle {
    padding: 5px;
    padding-right: 359.7px;
    border-bottom: 1px solid rgb(237, 227, 227);
    font-size: smaller;
    font-weight: bolder;
}


.scoreItems {
    margin-top: 30px;
    margin-left: 10px;
    flex-grow: 1;
}

.btns {
flex-grow: 0; 
display: flex;
width:100%;
justify-content: space-between;
}

@media (max-width: 430px) {
    .btns {
        margin-top: 20px;
    }
}

@media (max-width: 430px) {
    .mainGame {
        height: 60vh;
    }
}


@media (min-width: 431px) {
.btnP1 {
    font-size:larger;
    padding: 10px;
    padding-left:31px;
    padding-right:31px;
    border:1px solid rgb(43, 191, 142);
    background-color: rgb(43, 191, 142);
    color: rgb(244, 243, 242);
    border-bottom-right-radius: 3px;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
}
}

.btnP1 {
    font-size:larger;
    padding: 1px;
    padding-left:20px;
    padding-right:31px;
    border:1px solid rgb(43, 191, 142);
    background-color: rgb(43, 191, 142);
    color: rgb(244, 243, 242);
    border-bottom-right-radius: 3px;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
}


.btnP2 {
    font-size: larger;
    padding: 10px;
    padding-left:30px;
    padding-right:30px;
    border:1px solid rgb(60, 108, 242);
    background-color: rgb(60, 108, 242);
    color: rgb(244, 243, 242);
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;

}

.btnReset {
    font-size: larger;
    padding: 10px;
    padding-left:40px;
    padding-right:40px;
    border:1px solid rgb(245, 48, 90);
    background-color: rgb(245, 48, 90);
    color: rgb(244, 243, 242);
    border-bottom-left-radius: 3px;
    border-top-left-radius: 5px;
}

.scoreToScore {
    font-weight: bolder;
    font-size: 200%;
    margin-top: -20px;
    padding-bottom: 1px;
}

.playingToUI {
    font-weight: bolder;
    font-size: 120%;
    margin-top: 20px;
    padding-bottom: 1px;
}

#playTo {
    border-radius: 500px;
    padding:8px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.winnerColor {
    background-color: green;
}

.loserColor {
    background-color: red;
}

.winnerScoreColor {
    color:green;
}

.loserScoreColor {
    color:red;
}

